--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "doctrine/dbal": "^2.6",
         "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "parinpan/fan-jwt": "dev-master",
-        "maatwebsite/excel": "~2.1.21"
+        "maatwebsite/excel": "~2.1.21",
+        "parinpan/fan-jwt": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
